--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,4 +1,20 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
+{% block page_title %}{{ post.title }}{% endblock %}
+
 {% block page_content %}
-  {{ post }}
+  <section>
+    <article>
+      <h1 class="heading">{{ post.title }}</h1>
+      <small class="heading">
+        {{ post.date }}
+        <ul class="tags">
+          {% for tag in post.tags %}
+            <li class="tags"><a class="tags" href="/tags/{{ tag }}">#{{ tag }}</a></li>
+          {% endfor %}
+        </ul>
+      </small>
+      {{ post }}
+    </article>
+  </section>
 {% endblock %}
