--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -10,11 +10,33 @@
         {{ post.date }}
         <ul class="tags">
           {% for tag in post.tags %}
-            <li class="tags"><a class="tags" href="/tags/{{ tag }}">#{{ tag }}</a></li>
+            <li class="tags"><a class="tags" href="{{ url_for('main.view_tag', tag=tag) }}">#{{ tag }}</a></li>
           {% endfor %}
         </ul>
       </small>
       {{ post }}
     </article>
+    <article>
+      <div id="disqus_thread"></div>
+      <script>
+         var disqus_config = function () {
+           this.page.url = "http://kylerjohnston.com{{ url_for('main.post', post_name=post.slug) }}"; // Replace PAGE_URL with your page's canonical URL variable
+           this.page.identifier = {{ post.slug }}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+         };
+      (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+
+        s.src = '//kylerjohnston.disqus.com/embed.js';
+
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+      })();
+      </script>
+      <noscript>You gotta enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a> Sorry bud, I know how you feel.</noscript>
+    </article>
   </section>
+{% endblock %}
+
+{% block additional_scripts %}
+<script id="dsq-count-scr" src="//kylerjohnston.disqus.com/count.js" async></script>
 {% endblock %}
