Updated README; updated links in base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
       </aside>
       {% block page_content %}{% endblock %}
       <footer>
-        <p class="footer">Built with Python and Flask. <a href="http://github.com/kylerjohnston/kylerjohnston.github.io">View the source code on Github</a>.</p>
+        <p class="footer">Built with Python and Flask. <a href="http://github.com/kylerjohnston/another-static-flask-blog">View the source code on Github</a>.</p>
         <p class="footer">All content copyright <i class="fa fa-creative-commons"></i> 2015 Kyle Johnston and licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.</p>
       </footer>
     </div>
