--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -21,7 +21,7 @@
       <script>
          var disqus_config = function () {
            this.page.url = "http://kylerjohnston.com{{ url_for('main.post', post_name=post.slug) }}"; // Replace PAGE_URL with your page's canonical URL variable
-           this.page.identifier = {{ post.slug }}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+           this.page.identifier = "{{ post.slug }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
          };
       (function() { // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
