--- a/app/static/css/layout.css
+++ b/app/static/css/layout.css
@@ -52,6 +52,10 @@
     margin: 0px 0px 0px 0px;
     bottom: 0.25em;
   }
+
+  img {
+    max-width: 590px;
+  }
 }
 
 .container {
@@ -132,7 +136,7 @@ a.selected:hover {
 }
 
 article {
-  padding: 10px 0px 10px 0px;
+  padding: 10px 0px 50px 0px;
 }
 
 /********************************** Typography *******************************/
@@ -165,9 +169,13 @@ body {
   color: #333;
 }
 
-ul, li {
-  font-family: 'Roboto';
-  padding: 3px;
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  margin-left: 20px;
 }
 
 .heading {
@@ -314,10 +322,6 @@ tr:nth-child(even) {
 
 tr.invisible {
   background-color: #fdfdfd;
-}
-
-img {
-  max-width: 590px;
 }
 
 code {
