--- a/app/static/css/layout.css
+++ b/app/static/css/layout.css
@@ -35,6 +35,11 @@
   border: 0;
 }
 
+img {
+  display: block;
+  margin: 0 auto;
+}
+
 @media only screen and (min-width: 800px) {
   .header {
     height: 150px;
@@ -55,6 +60,12 @@
 
   img {
     max-width: 590px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  img {
+    max-width: 320px;
   }
 }
 
@@ -136,7 +147,7 @@ a.selected:hover {
 }
 
 article {
-  padding: 10px 0px 50px 0px;
+  padding: 10px 0px 100px 0px;
 }
 
 /********************************** Typography *******************************/
