--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,7 @@
         <div class="header_right">
           <ul class="nav">
             <li class="nav"><a href="{{ url_for('main.blog') }}" class="nav" id="nav">Blog</a></li>
+            <li class="nav"><a href="{{ url_for('main.archive') }}" class="nav" id="nav">Archive</a></li>
             <li class="nav"><a href="{{ url_for('main.about') }}" class="nav" id="nav">About</a></li>
             <li class="nav"><a href="{{ url_for('main.projects') }}" class="nav" id="nav">Projects</a></li>
           </ul>
