--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,8 +44,8 @@
       </aside>
       {% block page_content %}{% endblock %}
       <footer>
-        <p class="footer">Built with <i class="fa fa-heart"></i> using Python and Flask. <a href="http://github.com/kylerjohnston/another-static-flask-blog">View the source code on Github</a>.</p>
-        <p class="footer">All content copyright <i class="fa fa-creative-commons"></i> 2015&ndash;<span id="current-year"></span> Kyle Johnston and released under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+        <p class="footer">Built with <i class="fa fa-heart red"></i> using Python and Flask. <a href="http://github.com/kylerjohnston/another-static-flask-blog">View the source code on Github</a>.</p>
+        <p class="footer">All content copyright <i class="fa fa-copyright"></i> 2015&ndash;<span id="current-year"></span> Kyle Johnston and released under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
       </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
