--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,7 +69,9 @@
       </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="{{ url_for('static', filename='js/dostuff.js') }}"></script>
+    {% assets "js_all" %}
+    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    {% endassets %}
     {% block additional_scripts %}{% endblock %}
   </body>
 </html>
