--- a/app/static/scss/layout.scss
+++ b/app/static/scss/layout.scss
@@ -1,3 +1,7 @@
+@import 'base';
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700|Source+Code+Pro|Bitter);
+
 * {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
