Changes landing page to about instead of blog. Updates projects pages to reflect newer info.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Kyle R. Johnston is a coder, teacher, writer, and a researcher of 19th-century British literature. He is currently a graduate student at the University of Illinois at Urbana-Champaign. He blogs about the intersection of coding and literary studies.">
+    <meta name="description" content="Kyle Johnston is a coder, teacher, writer, and a researcher of 19th-century British literature. He is currently a graduate student at the University of Illinois at Urbana-Champaign. He blogs about the intersection of coding and literary studies.">
     <title>{% block page_title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('main.pygments_css') }}">
     <!--<link rel="stylesheet" href="{{ url_for('static',
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="header">
         <div class="header_left">
-          <a href="{{ url_for('main.blog') }}" class="name_nav">Kyle R. Johnston</a>
+          <a href="{{ url_for('main.about') }}" class="name_nav">Hi, I'm Kyle.</a>
         </div>
         <div class="header_right">
           <ul class="nav">
