--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="header">
         <div class="header_left">
-          <a href="{{ url_for('main.about') }}" class="name_nav">KYLE R. JOHNSTON</a>
+          <a href="{{ url_for('main.blog') }}" class="name_nav">KYLE R. JOHNSTON</a>
         </div>
         <div class="header_right">
           <ul class="nav">
