--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -2,6 +2,10 @@
 
 {% block page_title %}Kyle R. Johnston - Blog{% endblock %}
 
+{% block meta_description %}
+<meta name="description" content="Kyle Johnston is a coder, teacher, writer, and a researcher of 19th-century British literature. He is currently a graduate student at the University of Illinois at Urbana-Champaign. He blogs about the intersection of coding and literary studies.">
+{% endblock %}
+
 {% block page_content %}
   <section>
     {% for post in posts %}
