--- a/app/static/scss/typography.scss
+++ b/app/static/scss/typography.scss
@@ -88,7 +88,10 @@ a.atom:hover {
 }
 
 a.name_nav:hover, a.nav:hover {
-  font-weight: 400;
+  font-weight: 300;
+}
+
+a.nav:hover {
   color: $light-blue;
 }
 
